Pulled from other laptop

--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
         "file-saver": "^2.0.2",
         "material-ui-dropzone": "^2.4.7",
         "mobx": "^5.15.4",
+        "mobx-react": "^5.4.4",
         "mscgenjs-cli": "^3.0.8",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-ace": "^8.0.0",
         "react-dom": "^16.12.0",
+        "react-number-format": "^4.4.0",
         "react-scripts": "3.4.0",
+        "react-split-pane": "^0.1.89",
         "recharts": "^2.0.0-beta.1",
         "typeface-roboto": "0.0.75"
     },
