--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
     "dependencies": {
         "@material-ui/core": "^4.9.3",
         "@material-ui/icons": "^4.9.1",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
         "ace-builds": "^1.4.8",
         "file-saver": "^2.0.2",
         "material-ui-dropzone": "^2.4.7",
@@ -21,8 +18,13 @@
         "react-number-format": "^4.4.0",
         "react-scripts": "3.4.0",
         "react-split-pane": "^0.1.89",
-        "recharts": "^2.0.0-beta.1",
         "typeface-roboto": "0.0.75"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2"
+
     },
     "scripts": {
         "start": "react-scripts start",
