--- a/package.json
+++ b/package.json
@@ -3,13 +3,32 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@babel/core": "7.8.4",
         "@material-ui/core": "^4.9.3",
         "@material-ui/icons": "^4.9.1",
+        "ace-builds": "^1.4.8",
+        "file-saver": "^2.0.2",
+        "mobx": "^5.15.4",
+        "mobx-react": "^5.4.4",
+        "prop-types": "^15.7.2",
+        "react": "^16.12.0",
+        "react-ace": "^8.0.0",
+        "react-app-polyfill": "^1.0.6",
+        "react-dom": "^16.12.0",
+        "react-number-format": "^4.4.0",
+        "react-split-pane": "^0.1.89",
+        "styled-components": "^5.0.1",
+        "typeface-roboto": "0.0.75"
+    },
+    "devDependencies": {
+        "@babel/core": "7.8.4",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/plugin-proposal-decorators": "^7.8.3",
         "@svgr/webpack": "4.3.3",
         "@typescript-eslint/eslint-plugin": "^2.10.0",
         "@typescript-eslint/parser": "^2.10.0",
-        "ace-builds": "^1.4.8",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
         "babel-eslint": "10.0.3",
         "babel-jest": "^24.9.0",
         "babel-loader": "8.0.6",
@@ -29,7 +48,6 @@
         "eslint-plugin-react": "7.18.0",
         "eslint-plugin-react-hooks": "^1.6.1",
         "file-loader": "4.3.0",
-        "file-saver": "^2.0.2",
         "fs-extra": "^8.1.0",
         "html-webpack-plugin": "4.0.0-beta.11",
         "identity-obj-proxy": "3.0.0",
@@ -37,10 +55,7 @@
         "jest-environment-jsdom-fourteen": "1.0.1",
         "jest-resolve": "24.9.0",
         "jest-watch-typeahead": "0.4.2",
-        "material-ui-dropzone": "^2.4.7",
         "mini-css-extract-plugin": "0.9.0",
-        "mobx": "^5.15.4",
-        "mobx-react": "^5.4.4",
         "mscgenjs-cli": "^3.0.8",
         "optimize-css-assets-webpack-plugin": "5.0.3",
         "pnp-webpack-plugin": "1.6.0",
@@ -49,35 +64,19 @@
         "postcss-normalize": "8.0.1",
         "postcss-preset-env": "6.7.0",
         "postcss-safe-parser": "4.0.1",
-        "prop-types": "^15.7.2",
-        "react": "^16.12.0",
-        "react-ace": "^8.0.0",
-        "react-app-polyfill": "^1.0.6",
         "react-dev-utils": "^10.2.0",
-        "react-dom": "^16.12.0",
-        "react-number-format": "^4.4.0",
-        "react-split-pane": "^0.1.89",
         "resolve": "1.15.0",
         "resolve-url-loader": "3.1.1",
         "sass-loader": "8.0.2",
         "semver": "6.3.0",
         "style-loader": "0.23.1",
-        "styled-components": "^5.0.1",
         "terser-webpack-plugin": "2.3.4",
         "ts-pnp": "1.1.5",
-        "typeface-roboto": "0.0.75",
         "url-loader": "2.3.0",
         "webpack": "4.41.5",
         "webpack-dev-server": "3.10.2",
         "webpack-manifest-plugin": "2.2.0",
         "workbox-webpack-plugin": "4.3.1"
-    },
-    "devDependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/plugin-proposal-decorators": "^7.8.3",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2"
     },
     "scripts": {
         "start": "node scripts/start.js",
