--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/plugin-proposal-decorators": "^7.8.3",
         "@svgr/webpack": "4.3.3",
-        "@typescript-eslint/eslint-plugin": "^2.10.0",
-        "@typescript-eslint/parser": "^2.10.0",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "@typescript-eslint/eslint-plugin": "^2.10.0",
+        "@typescript-eslint/parser": "^2.10.0",
         "babel-eslint": "10.0.3",
         "babel-jest": "^24.9.0",
         "babel-loader": "8.0.6",
@@ -69,6 +69,7 @@
         "resolve-url-loader": "3.1.1",
         "sass-loader": "8.0.2",
         "semver": "6.3.0",
+        "serve": "^11.3.0",
         "style-loader": "0.23.1",
         "terser-webpack-plugin": "2.3.4",
         "ts-pnp": "1.1.5",
@@ -82,6 +83,7 @@
         "start": "node scripts/start.js",
         "build": "node scripts/build.js",
         "test": "node scripts/test.js",
+        "serve": "node node_modules/.bin/serve -s build",
         "mscgenjs": "mscgenjs"
     },
     "eslintConfig": {
