--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "file-saver": "^2.0.2",
         "mobx": "^5.15.4",
         "mobx-react": "^5.4.4",
+        "mscgenjs": "^4.0.5",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-ace": "^8.0.0",
@@ -56,7 +57,6 @@
         "jest-resolve": "24.9.0",
         "jest-watch-typeahead": "0.4.2",
         "mini-css-extract-plugin": "0.9.0",
-        "mscgenjs-cli": "^3.0.8",
         "optimize-css-assets-webpack-plugin": "5.0.3",
         "pnp-webpack-plugin": "1.6.0",
         "postcss-flexbugs-fixes": "4.1.0",
