--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
     "name": "mscgen",
     "version": "0.1.0",
     "private": true,
+    "author": {
+        "name": "David Skyberg",
+        "email": "davidskyberg@gmail.com"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/dskyberg/mscgen"
+    },
     "dependencies": {
         "@material-ui/core": "^4.9.3",
         "@material-ui/icons": "^4.9.1",
@@ -17,7 +25,6 @@
         "react-dom": "^16.12.0",
         "react-number-format": "^4.4.0",
         "react-split-pane": "^2.0.3",
-        "styled-components": "^5.0.1",
         "typeface-roboto": "0.0.75"
     },
     "devDependencies": {
