--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "mobx": "^5.15.4",
         "mobx-react": "^5.4.4",
         "mscgenjs": "^4.0.5",
+        "parse-filepath": "^1.0.2",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-ace": "^8.0.0",
