--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "react": "^16.12.0",
         "react-ace": "^8.0.0",
         "react-app-polyfill": "^1.0.6",
+        "react-dnd": "^10.0.2",
+        "react-dnd-html5-backend": "^10.0.2",
         "react-dom": "^16.12.0",
         "react-number-format": "^4.4.0",
         "react-split-pane": "^0.1.89",
