--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-dnd": "^10.0.2",
         "react-dnd-html5-backend": "^10.0.2",
         "react-dom": "^16.12.0",
+        "react-new-window": "^0.1.2",
         "react-number-format": "^4.4.0",
         "react-split-pane": "^0.1.89",
         "typeface-roboto": "0.0.75"
