--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
         "@typescript-eslint/eslint-plugin": "^2.10.0",
         "@typescript-eslint/parser": "^2.10.0",
         "babel-eslint": "10.0.3",
-        "babel-jest": "^24.9.0",
-        "babel-loader": "8.0.6",
+        "babel-jest": "^25.1.0",
+        "babel-loader": "^8.1.0",
         "babel-plugin-named-asset-import": "^0.3.6",
         "babel-preset-react-app": "^9.1.1",
         "camelcase": "^5.3.1",
@@ -51,9 +51,9 @@
         "css-loader": "3.4.2",
         "dotenv": "8.2.0",
         "dotenv-expand": "5.1.0",
-        "eslint": "^6.6.0",
+        "eslint": "^6.8.0",
         "eslint-config-react-app": "^5.2.0",
-        "eslint-loader": "3.0.3",
+        "eslint-loader": "^3.0.3",
         "eslint-plugin-flowtype": "4.6.0",
         "eslint-plugin-import": "2.20.0",
         "eslint-plugin-jsx-a11y": "6.2.3",
@@ -63,11 +63,12 @@
         "fs-extra": "^8.1.0",
         "html-webpack-plugin": "4.0.0-beta.11",
         "identity-obj-proxy": "3.0.0",
-        "jest": "24.9.0",
+        "jest": "^25.1.0",
         "jest-environment-jsdom-fourteen": "1.0.1",
         "jest-resolve": "24.9.0",
         "jest-watch-typeahead": "0.4.2",
         "mini-css-extract-plugin": "0.9.0",
+        "minimist": ">=1.2.2",
         "optimize-css-assets-webpack-plugin": "5.0.3",
         "pnp-webpack-plugin": "1.6.0",
         "postcss-flexbugs-fixes": "4.1.0",
@@ -85,7 +86,7 @@
         "terser-webpack-plugin": "2.3.4",
         "ts-pnp": "1.1.5",
         "url-loader": "2.3.0",
-        "webpack": "4.41.5",
+        "webpack": "^4.42.0",
         "webpack-dev-server": "3.10.2",
         "webpack-manifest-plugin": "2.2.0",
         "workbox-webpack-plugin": "4.3.1"
